<resources>
    <string name="app_name">Map It</string>
    <string name="login_background">login_background</string>
    <string name="welcome">Welcome To Map It!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="app_icon">app_icon</string>
    <string name="email">Email</string>
    <string name="google_maps_key">AIzaSyBI8NEIuStOT19uXtJr4XfyJyECKF3xWvg</string>>
    >
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="to_new_quiz_fragment">to_new_quiz_fragment</string>
    <string name="title_activity_maps_create_quiz">MapsActivityCreateQuiz</string>
    <string name="finish">Finish</string>
    <string name="remove_marker">remove_marker</string>
    <string name="test">Test</string>
    <string name="add_question">Add Question</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_subcategory">Choose Subcategory</string>
    <string name="use_existing_quiz">Use existing quiz</string>
    <string name="or">OR</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="subject">Subject:</string>
    <string name="questions">Questions:</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="question_i_j">Question i/j</string>
    <string name="_00_00">00:00</string>
    <string name="join_quiz">Join Quiz</string>
    <string name="wait">Please wait for the quiz to be finished</string>
    <string name="enter_a_subject_and_we_ll_find_question_for_you">Enter a subject and we\'ll find question for you!</string>
    <string name="enter_subject">Subject</string>
    <string name="generate_question">Generate Question</string>
    <string name="quiz_code">Quiz Code</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_quiz_code_and_join_quiz">Enter quiz code and join quiz</string>
</resources>