<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<EditText
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:id="@+id/quizNameEditText"
    android:background="@drawable/edit_text_bg"
    android:paddingStart="6dp"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    android:textSize="16sp"
    android:hint="@string/quiz_name"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:text="@string/choose_category"/>
    <Spinner
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/mapsCategoriesSpinner"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/choose_subcategory"/>
    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/mapsSubcategoriesSpinner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/finishDialogBtn"
            android:background="@drawable/button_bg"
            android:text="@string/create_quiz"
            android:textColor="@color/white"
            android:layout_width="200dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/useExistingQuizTextView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_p"
            android:text="@string/use_existing_quiz" />
    </LinearLayout>
</LinearLayout>