<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionActivity">


    <TextView
        android:id="@+id/countDownTimerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="60sp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/inQuizQuestionTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inQuizQuestionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginTop="150dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionIndexTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_i_j"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inQuizQuestionTv" />

    <Button
        android:id="@+id/inQuizAns1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_1"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionIndexTv"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/inQuizAns2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_2"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inQuizAns1" />

    <Button
        android:id="@+id/inQuizAns3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_3"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inQuizAns2" />

    <Button
        android:id="@+id/inQuizAns4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/answer_4"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inQuizAns3" />

</androidx.constraintlayout.widget.ConstraintLayout>