<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapCreate"
        tools:context=".activities.MapsActivityCreateQuiz"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/removerMarkerImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/remove_marker" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_bg"
        android:visibility="invisible"
        android:text="@string/finish"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/createQuizBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_bg"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/create_quiz"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>