<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/login_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/login_screen"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="161dp"
        android:background="@drawable/vie_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/loginViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTabLayout"
            app:layout_constraintVertical_bias="0"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/loginTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/blue_p"
            app:tabTextAppearance="@style/tab_text"
            app:tabSelectedTextColor="#636363"
            app:tabTextColor="#999999"
            app:layout_constraintVertical_bias="0"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/app_icon"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias=".5"
        app:layout_constraintBottom_toBottomOf="@+id/loginBackground"
        app:layout_constraintEnd_toEndOf="@+id/loginBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>